# torchdrive

./: .dockerignore  .gitignore  .gitmodules  .lintrunner.toml  .pyre_configuration  .torchxconfig  Dockerfile  Dockerfile.cpu  LICENSE  README.md  autolabel.py  export.py  export_dataset.py  hubconf.py  requirements.txt  setup.cfg  train.py
.github/workflows/: lint.yaml  pyre.yaml  unittests.yaml
configs/: diff_traj.py  diff_traj_export.py  diff_traj_exported.py  rice.py  simplebev.py  simplebev3d.py  simplebev3d_det_path.py  simplebev3d_multi_pose.py  vit_jepa.py
notebooks/: compute_dream_pos.ipynb  dataset-debug.ipynb  inductor-memory-leak.ipynb  masks.ipynb  model-debug.ipynb  traj_ae.ipynb
rfcs/: primitives.md
scripts/: docker_pyre.sh  docker_unittest.sh  lint.sh
stubs/: cv2.pyi
stubs/av/: __init__.pyi  error.pyi  filter.pyi
torchdrive/: __init__.py  amp.py  attention.py  autograd.py  checkpoint.py  data.py  debug.py  dist.py  losses.py  matcher.py  notebook.py  positional_encoding.py  raymarcher.py  test_amp.py  test_attention.py  test_autograd.py  test_checkpoint.py  test_data.py  test_debug.py  test_losses.py  test_matcher.py  test_notebook.py  test_positional_encoding.py  test_raymarcher.py  test_train_config.py  testing.py  train_config.py
torchdrive/datasets/: autolabeler.py  dataset.py  dummy.py  exported.py  nuscenes.py  nuscenes_dataset.py  rice.py  test_autolabeler.py  test_dummy.py  test_rice.py  (+1 more)
torchworld/: README.md  common_camera_utils.py  common_testing.py  ops.py  positional_encoding.py  test_positional_encoding.py  test_vis.py  vis.py
(+105 files in other folders)
