[metadata]
name = torchdrive
version = attr: torchdrive.VERSION
author = Tristan Rice
author_email = rice@fn.lc
description = PyTorch library for BEV style perception models
long_description = file: README.md, LICENSE
keywords = pytorch, transformer, self-driving
license = BSD-3-Clause
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.7
install_requires =
    pytorch3d
    flash_attn
    torchvision
    scipy
